# fyrnheim

./: .gitignore  .huginn-project  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOW_WE_WORK.md  LICENSE  PRODUCT_SYSTEM.md  README.md  VALUES.md  VISION.md  fyrnheim  pyproject.toml
.claude/archive/: brainstorm-auto.md  brainstorm.md  pick-issue.md  plan-issue.md  product-epic.md
.claude/commands/: brainstorm-epics.md  execute-mission.md  fix-pr-feedback.md  new-feature.md  plan-mission.md  product-epic-breakdown.md  product-epic.md  product-hypotheses.md  product-iteration.md  product-judgment.md  product-mission-breakdown.md  product-roadmap.md  product-story-handoff.md  product-values.md  product-vision.md  retro.md
.claude/hooks/: huginn-save.sh
.claude/skills/: product-epic-breakdown.md  product-judgment.md  product-mission-breakdown.md  product-story-handoff.md  testing.md
.github/workflows/: ci.yml  publish.yml
.pi/: README.md
.pi/prompts/: execute-mission.md  fix-pr-feedback.md  plan-mission.md  product-epic-breakdown.md  product-judgment.md  product-mission-breakdown.md  product-values.md  product-vision.md  retro.md
docs/: M077-architecture-refactor-audit.md  M084-bigquery-pushdown-roadmap.md  M088-column-pushdown.md  M089-parallel-staging.md  M092-ibis-vs-sqlglot-warehouse-ir.md  mcp-analytics-catalog.md  mcp-container-deployment.md  mcp-http-transport.md  mcp-insight-query-tools.md  project-manifest.md  property-bags.md  warehouse-compute-contract.md
docs/decisions/: 0001-activity-definitions-drop-vs-preserve.md
docs/plans/: 2026-02-17-E001-S001-package-structure-design.md  2026-02-17-E001-S002-core-types-design.md  2026-02-17-E001-S003-activity-analytics-design.md  (+64 more)
entities/: account.py  mailerlite_person.py  person.py  product.py
scripts/: brainstorm-issues.sh  brainstorm-parallel.sh  plan-issues.sh  plan-parallel.sh  quality-gates.sh  run-issue.sh  run-parallel.sh
tests/: _legacy_pandas_projection.py  conftest.py  sql_shape.py  test_activity_analytics.py  test_activity_definition.py  test_activity_engine.py  test_activity_registry.py  test_analytics_aggregation.py  test_analytics_aggregation_e2e.py  test_analytics_catalog.py  test_analytics_entity.py  test_analytics_entity_engine.py  test_analytics_model_registry.py  test_benchmark_harness.py  test_case_column.py  test_cli.py  test_cli_check.py  test_cli_diagnostics.py  test_cli_errors.py  test_cli_generate.py  test_cli_init.py  test_cli_list.py  test_cli_run.py  test_cli_staging.py  test_cli_test_cmd.py  test_components.py  test_config.py  test_core_source.py  test_core_types.py  test_dag_visualization.py  test_dagster_manifest_metadata.py  test_diff_engine.py  test_docs_catalog.py  test_docs_cli.py  test_docs_generator.py  test_docs_template.py  test_e2e_activity.py  test_e2e_activity_pipeline.py  test_e2e_activity_preserve.py  test_e2e_analytics.py  (+73 more)
website/: README.md  astro.config.mjs  package-lock.json  package.json
(+736 files in other folders)
